--- a/app/src/main/res/layout/layout_item_contacts.xml
+++ b/app/src/main/res/layout/layout_item_contacts.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="5dp"
-    app:cardMaxElevation="5dp">
+    android:background="@color/white"
+    android:layout_margin="2dp"
+    app:cardBackgroundColor="@color/white"
+    android:layout_height="wrap_content">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_gravity="center"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/profile_contact"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="#E0E0E0"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -23,26 +24,28 @@
 
             <QuickContactBadge
                 android:id="@+id/profile_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_gravity="center"
-                android:scaleType="fitCenter"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
                 android:src="@drawable/userprofile" />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/txt_Contact_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
             android:fontFamily="sans-serif-condensed-medium"
             android:maxLines="1"
-            android:text="skdfhskdfhskf2394729472492skjdfhsdjkfhsfs9573957357350357305375"
+            android:text="vishnu"
             android:textColor="@color/black"
             android:textSize="14sp"
+            android:lines="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/profile_contact"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,7 +59,8 @@
             android:text="@string/mobile_number"
             android:textColor="@color/black"
             android:textSize="14sp"
+            android:visibility="gone"
             app:layout_constraintStart_toEndOf="@+id/profile_contact"
             app:layout_constraintTop_toBottomOf="@+id/txt_Contact_name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
