--- a/app/src/main/res/layout/fragment_call_history.xml
+++ b/app/src/main/res/layout/fragment_call_history.xml
@@ -12,9 +12,10 @@
         <LinearLayout
             android:id="@+id/layout_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -35,8 +36,7 @@
                 android:textSize="20sp"
                 app:iconifiedByDefault="false"
                 app:queryHint="@string/app_name"
-                app:searchHintIcon="@null"
-                />
+                app:searchHintIcon="@null" />
 
             <ImageView
                 android:layout_width="50dp"
@@ -48,222 +48,26 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/layout_tabs"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/layout_line"
-            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_history"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_title">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:id="@+id/img_ic_history"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginTop="3dp"
-                        android:backgroundTint="@color/orange"
-                        android:gravity="center"
-                        android:src="@drawable/ic_history"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/txt_call_history"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="5dp"
-                        android:fontFamily="sans-serif-black"
-                        android:gravity="center"
-                        android:text="@string/call_history"
-                        android:textColor="@color/orange" />
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_contacts"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="2dp"
-                android:layout_weight="1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_title">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:id="@+id/img_contacts"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:gravity="center"
-                        android:src="@drawable/ic_sms"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/txt_contacts"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="5dp"
-                        android:fontFamily="sans-serif-black"
-                        android:gravity="center"
-                        android:text="@string/contacts"
-                        android:textColor="@color/black" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/layout_line"
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/layout_recyclerview"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_tabs">
+            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
+            app:tabIconTintMode="multiply"
+            app:tabIndicatorColor="@color/orange"
+            app:tabSelectedTextColor="@color/orange"
+            app:tabTextColor="@color/black" />
 
-            <View
-                android:id="@+id/view_history"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/orange" />
-
-            <View
-                android:id="@+id/view_contacts"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/white" />
-        </LinearLayout>
-
-        <RelativeLayout
-            android:id="@+id/layout_recyclerview"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="50dp"
+            android:layout_weight="1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_line">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintBottom_toTopOf="@+id/card_call_bt"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_view_call_history"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="10dp"
-                    android:visibility="gone"
-                    tools:listitem="@layout/item_callhistory" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:background="@color/white"
-                    android:padding="5dp">
-                    <TextView
-                        android:id="@+id/tx_favourite"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="5dp"
-                        android:fontFamily="sans-serif-black"
-                        android:gravity="center"
-                        android:text="@string/favourite"
-                        android:layout_margin="5dp"
-                        android:textColor="@color/black" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recy_list_favourites_contacts"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:padding="10dp"
-                        android:visibility="gone"
-                        tools:listitem="@layout/item_favourites_contacts" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recy_list_contacts"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:background="@color/white"
-                        tools:listitem="@layout/layout_item_contacts" />
-                </LinearLayout>
-
-            </RelativeLayout>
-
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_call_bt"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
-                android:layout_marginBottom="20dp"
-                android:elevation="10dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="70dp"
-                app:cardElevation="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_dial_pad" />
-            </androidx.cardview.widget.CardView>
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/txt_nodata_found"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="No Call Logs Found"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ProgressBar
-            android:id="@+id/loading"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
+            app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
