--- a/app/src/main/res/layout/fragment_call_logs.xml
+++ b/app/src/main/res/layout/fragment_call_logs.xml
@@ -1,15 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.CallLogsFrag">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_call_history"
+    <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        android:layout_margin="10dp"
-        tools:listitem="@layout/item_callhistory" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:id="@+id/layout_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:padding="5dp"
+                android:src="@drawable/userprofile" />
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search_contacts"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:background="@drawable/bg_shape_rect_orange"
+                android:padding="5dp"
+                android:searchSuggestThreshold="2"
+                android:textSize="20sp"
+                app:iconifiedByDefault="false"
+                app:queryHint="@string/app_name"
+                app:searchHintIcon="@null" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:padding="5dp"
+                android:rotation="270"
+                android:src="@drawable/ic_setting" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_call_history"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:overScrollMode="never"
+                android:padding="10dp"
+                android:nestedScrollingEnabled="false"
+                tools:listitem="@layout/item_callhistory" />
+
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
