--- a/app/src/main/res/layout/fragment_call_logs.xml
+++ b/app/src/main/res/layout/fragment_call_logs.xml
@@ -4,68 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.fragments.CallLogsFrag">
     <LinearLayout
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="vertical"
+        android:id="@+id/layout_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/layout_toolbar"
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="5dp"
+            android:src="@drawable/userprofile" />
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_contacts"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:padding="5dp"
-                android:src="@drawable/userprofile" />
-
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/search_contacts"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@drawable/bg_shape_rect_orange"
-                android:padding="5dp"
-                android:searchSuggestThreshold="2"
-                android:textSize="20sp"
-                app:iconifiedByDefault="false"
-                app:queryHint="@string/app_name"
-                app:searchHintIcon="@null" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:padding="5dp"
-                android:rotation="270"
-                android:src="@drawable/ic_setting" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
             android:layout_weight="3"
-            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">
+            android:background="@drawable/bg_shape_rect_orange"
+            android:padding="5dp"
+            android:searchSuggestThreshold="2"
+            android:textSize="20sp"
+            app:iconifiedByDefault="false"
+            app:queryHint="@string/app_name"
+            app:searchHintIcon="@null" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view_call_history"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:overScrollMode="never"
-                android:padding="10dp"
-                android:nestedScrollingEnabled="false"
-                tools:listitem="@layout/item_callhistory" />
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="5dp"
+            android:rotation="270"
+            android:src="@drawable/ic_setting" />
 
-        </LinearLayout>
+
     </LinearLayout>
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_call_history"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:overScrollMode="never"
+            android:padding="10dp"
+            android:nestedScrollingEnabled="false"
+            tools:listitem="@layout/item_callhistory" />
+
+    </LinearLayout></LinearLayout>
