--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.fragments.ContactsFrag">
+    tools:context=".ui.fragments.ContactsFrag"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,6 +11,44 @@
         android:background="@color/white"
         android:orientation="vertical"
         android:padding="5dp">
+        <LinearLayout
+            android:id="@+id/layout_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:padding="5dp"
+                android:src="@drawable/userprofile" />
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search_contacts"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:background="@drawable/bg_shape_rect_orange"
+                android:padding="5dp"
+                android:searchSuggestThreshold="2"
+                android:textSize="20sp"
+                app:iconifiedByDefault="false"
+                app:queryHint="@string/app_name"
+                app:searchHintIcon="@null" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:padding="5dp"
+                android:rotation="270"
+                android:src="@drawable/ic_setting" />
+
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tx_favourite"
